--- a/1_introduction - variables_&_datatypes/index.html
+++ b/1_introduction - variables_&_datatypes/index.html
@@ -50,7 +50,7 @@
         const product = "Nike shoe"
         const price = 200
 
-        const message = "Hello " + customer + " , your " + product + " costs $" + price
+        const message =  "Hello customer, your product is $price"
         // alert(message)
 
         // const score = prompt("What did you score?")
