created a calculator task

--- a/6_Events/todo.html
+++ b/6_Events/todo.html
@@ -35,6 +35,16 @@
 
         <ul id="todo-list">
         </ul>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Phone</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+        </table>
     </section>
 
     <script src="./todo.js"></script>
