--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -9,7 +9,7 @@
 <body>
     <div class="calculator-container">
         <div class="display">
-            <input type="text" value="" readonly id="input">
+            <input type="number" value="" readonly id="input">
         </div>
         <div class="buttons">
             <button>CE</button>
